--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <div class="container">
         <header>
         <span class="logo">
-            <img class="logo1" src="/logo.png">
+            <img class="logo1" src="logo.png">
             <h5>Master Card</h5>
-            <img class="chip" src="/chip.png">
+            <img class="chip" src="chip.png">
         </span>
     </header>
 
